--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-copy": "^0.5.0",
     "express": "^4.4.5",
-    "grunt-nodemon": "^0.2.1"
+    "grunt-nodemon": "^0.2.1",
+    "grunt-concurrent": "^0.5.0"
   }
 }
